# ToDoList

./: .gitignore  CMakeLists.txt  RunallTest.cpp  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskListException.h  TaskListExceptionTest.cpp  TaskTest.cpp  main.cpp
test/: CMakeLists.txt  TaskListTest.cpp  TaskTest.cpp
